kubernetes/app/ingress/app-ingress-oneHost.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ${namespace}
  name: app-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ${global_static_ip_name}
    networking.gke.io/managed-certificates: ${managed_certificate_name}
    networking.gke.io/v1beta1.FrontendConfig: ${frontend_config_name}
spec:
  rules:
    - host: ${prd_hostname}
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: ${prd_service}
                port:
                  number: 80
