kubernetes/app/ingress/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ${namespace}
  name: app-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ${global_static_ip_name}
    networking.gke.io/managed-certificates: ${managed_certificate_name}
    networking.gke.io/v1beta1.FrontendConfig: ${frontend_config_name}
spec:
  rules:
%{ if enable_api }
    - host: ${api_hostname}
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: app-svc
                port:
                  number: 80
%{ endif }
    - host: ${portal_hostname}
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: app-svc
                port:
                  number: 80
%{ if enable_storybook }
    - host: ${storybook_hostname}
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: app-svc
                port:
                  number: 80
%{ endif }
%{ if enable_callback }
    - host: ${callback_hostname}
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: app-svc
                port:
                  number: 80
%{ endif }
